# decentralized-message-queue

./: .gitattributes  .gitignore  CMakeLists.txt  NOTICE  PRE-LAUNCH-DECISIONS.md  README.md  audit-cluster-wallet-keyfile-recovery.md  audit_crypto_primitives_encoding.md  cats.json  network_rpc_dos_audit.md  top100.json
.github/workflows/: ci.yml
.smoke_bsa/: README_with_fb31_and_s004.md
cryptotest/: main.cpp
docs/: C99-MINIX-PORT.md  CLI-REFERENCE.md  Confrontation_against_public_unjustice_i.odt  DOC-TIERING-PLAN.md  Improvements.md  MOTIVATION.md  OPEN-VULNERABILITIES.md  PROTOCOL.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  UNIT-TESTS.md  V2-DAPP-DESIGN.md  V2-DESIGN.md  WHITEPAPER-v1.x.md
docs/proofs/: AbortCascadeLiveness.md  AbortCertificateSoundness.md  AbortDigestCanonicalizationSoundness.md  AbortEventApply.md  AbortRecordProofSoundness.md  AccountHistorySoundness.md  AccountStateInvariants.md  AdversarialTransportHarness.md  AnonAddressDerivationMigration.md  AppliedReceiptRestore.md  AppliedReceiptSnapshotSoundness.md  AtRestKdfMigrationCoverage.md  AuditLayerSoundness.md  BFTProposerElectionSoundness.md  BFTSafety.md  BatchSigningSoundness.md  Beaconless-v2-SPEC.md  BinaryCodecRoundTripSoundness.md  BlockDigestCrossBinaryParity.md  BlockSignatureFormSoundness.md  BlockchainStateIntegrity.md  BoundedReorgDesign.md  BoundedReorgSoundness.md  BulletproofsIPASoundness.md  BulletproofsRangeProofSoundness.md  C99CryptoStackAudit.md  CRYPTO-C99-SPEC.md  CanonicalSigningBytesParity.md  Censorship.md  ChainStorageV1.md  ClockInjectionSeam.md  ClsagRingSignatureSoundness.md  CommitteeSelectionAbortDeterminismSoundness.md  CompositeStateReadSoundness.md  ConfidentialTxBalanceSoundness.md  ConfidentialTxBundleSoundness.md  ConfidentialTxIntegrationDesign.md  ConsensusPhaseStructureSoundness.md  ConstantProofSoundness.md  ConstantTimeInventory.md  (+181 more)
docs/proofs/tla/: AbortApply.cfg  AbortApply.tla  AbortEscalation.cfg  AbortEscalation.tla  AccountState.cfg  AccountState.tla  AnonAccountLifecycle.cfg  AnonAccountLifecycle.tla  AppliedReceiptRestore.cfg  AppliedReceiptRestore.tla  BFTAcceptGate.cfg  BFTAcceptGate.tla  BlockTimestampMonotonic.cfg  BlockTimestampMonotonic.tla  BlockchainStateIntegrity.tla  BoundedMempoolAdmission.cfg  BoundedMempoolAdmission.tla  CHECK-RESULTS.md  ChainPrevHashLink.cfg  ChainPrevHashLink.tla  CompositeKeyStateProof.cfg  CompositeKeyStateProof.tla  Consensus.cfg  Consensus.tla  (+87 more)
include/determ/: crypto.h  crypto.hpp  types.hpp
include/dhcoin/: types.hpp
include/unchained/: types.hpp
light/: account_history.cpp  account_history.hpp  audit_tx.cpp  audit_tx.hpp  ct_tx.cpp  ct_tx.hpp  export.cpp  export.hpp  keyfile.cpp  keyfile.hpp  main.cpp  persist.cpp  persist.hpp  pq_sign_tx.cpp  pq_sign_tx.hpp  rpc_client.cpp  rpc_client.hpp  sign_tx.cpp  sign_tx.hpp  trustless_read.cpp  trustless_read.hpp  verify.cpp  verify.hpp  verify_archive.cpp  verify_archive.hpp  verify_ct.cpp  verify_ct.hpp  verify_state_bundle.cpp  verify_state_bundle.hpp  verify_state_root.cpp  verify_state_root.hpp  verify_tx_inclusion.cpp  verify_tx_inclusion.hpp  watch.cpp  watch.hpp
sim/: dsf_main.cpp  generator.hpp  property.hpp  scenario.hpp  scenarios.hpp  scenarios_inc2.hpp  scenarios_inc3.hpp  scheduler.hpp  trace.hpp  virtual_clock.hpp
src/: main.cpp
src/chain/: block.cpp  chain.cpp  genesis.cpp  pq_tx_auth.cpp
src/crypto/: README.md  ct.c  delay_hash.cpp  frost.cpp  keys.cpp  merkle.cpp  pq_address.cpp  pqauth.cpp  random.cpp  secure_zero.c  sha256.cpp
src/net/: binary_codec.cpp  gossip.cpp  iocp_detail.hpp  iocp_event_loop.cpp  iocp_transport.cpp  messages.cpp  peer.cpp  reactor_event_loop.cpp  reactor_transport.cpp  sync_client.cpp  virtual_transport.cpp
src/node/: committee_pool.cpp  node.cpp  producer.cpp  registry.cpp  shardtip_verify.cpp  validator.cpp
src/rpc/: rpc.cpp
tools/: c99_libsodium_xval.c  ci_local.sh  common.sh  md_to_pdf.py  operator_account_age_distribution.sh  operator_account_balance_history.sh  operator_account_growth.sh  operator_active_set_headroom.sh  operator_anchor_audit.sh  operator_anomaly_summary.sh  operator_anon_address_density.sh  operator_anon_address_usage.sh  operator_anon_canonicalization_audit.sh  operator_backup_health.sh  operator_balance_band_histogram.sh  operator_balance_distribution.sh  operator_block_cadence_regularity.sh  operator_block_creator_fairness.sh  operator_block_fullness_audit.sh  operator_block_inclusion_audit.sh  operator_block_lag_check.sh  operator_block_propagation_latency.sh  operator_block_size_audit.sh  operator_chain_compaction_audit.sh  operator_chain_diff.sh  operator_chain_export.sh  operator_chain_freshness.sh  operator_chain_health.sh  operator_chain_invariants_audit.sh  operator_chain_orphan_check.sh  operator_chain_replay_speedometer.sh  operator_chain_storage_profile.sh  operator_chain_summary_diff.sh  operator_chain_verify.sh  operator_committee_audit.sh  operator_committee_capture_margin.sh  operator_committee_membership_history.sh  operator_committee_rotation.sh  operator_committee_snapshot.sh  operator_config_audit.sh  (+659 more)
tools/vectors/: aes256_gcm.json  aes_gcm_cavp.json  aes_gcm_decrypt.json  argon2id.json  base64_strict.json  blake2b.json  bp_agg_rangeproof.json  bp_ipa.json  bp_rangeproof.json  chacha20_poly1305.json  chacha20_poly1305_decrypt.json  clsag.json  ed25519.json  ed25519_verify_strict.json  enote.json  ff_aggrangeproof.json  ff_balance.json  ff_ipa.json  ff_pedersen.json  ff_rangeproof.json  ff_scalar.json  frost_ed25519_rfc9591.json  hkdf_sha256.json  hmac_sha256.json  lsag.json  mldsa_keygen.json  mldsa_ntt.json  mldsa_pack.json  mldsa_sample.json  mldsa_sign.json  mldsa_verify.json  notekey_fips.json  notekey_modern.json  p256.json  p256_balance.json  p256_ctx_bundle.json  p256_h2c.json  p256_oprf.json  pbkdf2_sha256.json  pedersen.json  (+11 more)
wallet/: PHASE6_PORTING_NOTES.md  envelope.cpp  envelope.hpp  main.cpp  opaque_adapter.cpp  opaque_adapter.hpp  opaque_primitives.cpp  opaque_primitives.hpp  recovery.cpp  recovery.hpp  shamir.cpp  shamir.hpp
(+196 files in other folders)
